--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codeagency/codexcms",
+    "name": "carminemilieni/codexcms",
     "type": "project",
     "description": "CodexCMS starter app based on codeigniter 4",
     "homepage": "https://codex.agency",
