--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,31 @@
 {
-    "name": "codexagency/codexcmsframework",
-    "type": "project",
-    "description": "CodexCMS framework based on codeigniter 4",
-    "homepage": "https://codex.agency",
-    "license": "MIT",
-    "require": {
-        "php": ">=7.2",
-        "codeigniter4/codeigniter4": "^4"
-    },
-    "require-dev": {
-        "mikey179/vfsstream": "1.6.*",
-        "phpunit/phpunit": "8.5.*"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Support\\": "tests/_support"
-        }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "post-update-cmd": [
-            "@composer dump-autoload"
-        ]
-    },
-    "support": {
-        "forum": "https://codex.agency/"
-    },
-    "authors": [
-        {
-            "name": "Carmine Milieni",
-            "email": "carmine.milieni@gmail.com",
-            "role": "Developer",
-            "homepage": "https://carminemilieni.it"
-        }
-    ],
-    "minimum-stability": "dev",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/codeigniter4/codeigniter4"
-        }
-    ]
+	"name": "codexagency/codexcmsframework",
+	"type": "project",
+	"description": "codexcmsframework based on ci4",
+	"homepage": "https://codeigniter.com",
+	"license": "MIT",
+	"require": {
+		"php": ">=7.2",
+		"codeigniter4/framework": "^4"
+	},
+	"require-dev": {
+		"mikey179/vfsstream": "1.6.*",
+		"phpunit/phpunit": "8.5.*"
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\Support\\": "tests/_support"
+		}
+	},
+	"scripts": {
+		"test": "phpunit",
+		"post-update-cmd": [
+			"@composer dump-autoload"
+		]
+	},
+	"support": {
+		"forum": "http://forum.codeigniter.com/",
+		"source": "https://github.com/codeigniter4/CodeIgniter4",
+		"slack": "https://codeigniterchat.slack.com"
+	}
 }
