--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,11 @@ composer.lock
 
 *.code-workspace
 
-/writable/cache
-/writable/debugbar
-/writable/logs
-/writable/session
-/writable/uploads
+writable/cache/*
+writable/debugbar/*
+writable/logs/*
+writable/session/*
+writable/uploads/*
 .env
+writable/logs/log-2020-03-16.log
+writable/logs/log-2020-03-16.log
